Fix phone position and fix overlap

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -81,6 +81,13 @@
   min-width: 500px;
   margin: auto;
 }
+.homeDesp {
+  font-size: 1.4em;
+  margin: auto;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 #samapan {
   color: white !important;
