--- a/public/css/styleMobileC.scss
+++ b/public/css/styleMobileC.scss
@@ -158,7 +158,7 @@ button {
 }
 
 .telContact {
-  text-align: center;
+  text-align: left;
   font-size: 1.2em;
   padding-top: 5px;
   line-height: 0.8em;
